--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-glass">
-      <div class="container">
-        <a class="navbar-brand" href="index.html">Fabiano</a>
-      </div>
+        <div class="container d-flex justify-content-between align-items-center">
 
-        <a href="https://fdcr-tech.github.io/portifolioFabiano/" class="btn-voltar">
-        ← Voltar
-        </a>
+            <a class="navbar-brand" href="index.html">Fabiano</a>
+
+            <a href="https://fdcr-tech.github.io/portifolioFabiano/" class="btn-voltar">
+            ← Voltar
+            </a>
+
+        </div>
     </nav>
 
 
