--- a/index.html
+++ b/index.html
@@ -12,10 +12,15 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-glass">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">Fabiano</a>
-        </div>
+      <div class="container">
+        <a class="navbar-brand" href="index.html">Fabiano</a>
+      </div>
+
+        <a href="https://fdcr-tech.github.io/portifolioFabiano/" class="btn-voltar">
+        ← Voltar
+        </a>
     </nav>
+
 
     <header class="hero-section d-flex align-items-center justify-content-center text-center">
         <div class="container">
