--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-glass">
         <div class="container d-flex justify-content-between align-items-center">
 
-            <a class="navbar-brand" href="index.html">Fabiano</a>
+        <div class="nav-slot"></div>
 
-            <a href="https://fdcr-tech.github.io/portifolioFabiano/" class="btn-voltar">
-            ← Voltar
-            </a>
+          <a class="navbar-brand" href="index.html">Fabiano</a>
 
         </div>
+
+          <a href="https://fdcr-tech.github.io/portifolioFabiano/" class="btn-voltar">
+            ← Voltar
+          </a>
     </nav>
 
 
